--- a/HGNN/train/ConfigParserWriter-HyperParameterExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-HyperParameterExperiments.ipynb
@@ -29,35 +29,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"/home/elhamod/HGNN/experiments/augmentationComparison\"\n",
+    "experimentName = \"Fish50-5run-BB-exRandomFeatures\"\n",
     "numOfExperiments=10\n",
     "\n",
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
-    "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'53', #  #'11', '53', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"image_path\": \"Curated4/Easy_50\", # \"cifar-100-python\", \"Curated4/Easy_50\"\n",
+    "    \"suffix\":None, \n",
     "    \n",
     "    # dataset\n",
-    "    \"training_count\":0.64,\n",
-    "    \"validation_count\":0.16,\n",
+    "    \"img_res\": 448, #224 #32, 448\n",
+    "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable\n",
-    "    \"n_epochs\":5000, # allow it to run for long time 4000\n",
-    "    \"learning_rate\":0.01, # Seems 0.0001 to be best value with Adam. 0.1 best for SGD\n",
-    "    \"numOfTrials\":2,\n",
-    "    \"patience\": 50,\n",
-    "    \"fc_width\":200,\n",
-    "    \"fc_layers\": 2,\n",
-    "    \"modelType\":\"blackbox\",\n",
-    "    \"lambda\": 0.6,\n",
-    "    \"unsupervisedOnTest\": False,\n",
+    "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
+    "    \"learning_rate\": 0.001,#0.001, is best #0.0001,#0.1, #0.01, #0.0003, # 0.00005\n",
+    "    \"numOfTrials\":5, #5\n",
+    "    \"fc_layers\": 1,\n",
+    "    \"pretrained\": True,\n",
+    "    \"epochs\": 120,\n",
+    "    \"patience\": -1,#12,#-1, # None = \"epochs\"\n",
+    "    \"optimizer\": \"adabelief\",#\"Adam\",\n",
+    "    \"scheduler\": \"plateau\",\n",
+    "    \"weightdecay\": 0.01, #0.0001\n",
+    "    \"scheduler_gamma\":0.5,\n",
+    "    \"scheduler_patience\":15,   \n",
+    "    \n",
+    "#     Cifar\tlr1e-3\tweightdecay5e-4\n",
+    "# ImageNet\tlr1e-3\tweightdecay1e-2\n",
+    "    \n",
+    "    \"modelType\":\"exRandomFeatures\", #BB DISCO DSN HGNN HGNN_cat \"HGNN_add\"  exRandomFeatures\n",
+    "    \n",
+    "    \"lambda\": 1,#0.01,\n",
+    "    \"two_phase_lambda\": False,\n",
+    "\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
-    "    \"augmented\": False\n",
+    "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
+    "    \n",
+    "    \"adaptive_smoothing\": False,\n",
+    "    \"adaptive_lambda\": 0.1,#0.015, #optimized for time\n",
+    "    \"adaptive_alpha\": 0.5,#0.8, #optimized for time\n",
+    "    \n",
+    "    \"tripletEnabled\": False,\n",
+    "    \"regularTripletLoss\": False,\n",
+    "    \"tripletSamples\": 2,\n",
+    "    \"tripletSelector\": \"semihard\",\n",
+    "    \"tripletMargin\": 2, #0.2\n",
+    "    \"triplet_layers_dic\": \"layer2,layer4\",\n",
+    "    \n",
+    "    \"L1reg\": False,\n",
+    "\n",
+    "    \"phylogeny_loss\": False, \n",
+    "    \n",
+    "    \"grayscale\": False, #Keep False\n",
+    "    \"tl_extralayer\": False, #Keep False\n",
+    "    \"random_fitting\": False, #Keep False\n",
     "}\n",
     "\n",
-    "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
-    "dataPath=\"/home/elhamod/HGNN/data\""
+    "experimentsPath= \"/raid/elhamod/Fish/experiments/\" # \"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
+    "dataPath=\"/raid/elhamod/Fish\" #\"/raid/elhamod/Fish\" \"/raid/elhamod/\""
    ]
   },
   {
@@ -73,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cp = ConfigParser(experimentName)"
+    "cp = ConfigParser(experimentsPath, dataPath, experimentName)"
    ]
   },
   {
@@ -110,10 +140,14 @@
     "#     \"n_channels\": scope.int(hp.choice('n_channels', [1, 3])), \n",
     "#     \"imageDimension\": scope.int(hp.quniform('imageDimension', 28, 420, 28)),\n",
     "#     \"batchSize\": scope.int(hp.quniform('batchSize', 50, 550, 50)),\n",
-    "    \"learning_rate\": hp.loguniform('learning_rate', math.log(0.0001), math.log(0.01)),\n",
-    "#     \"patience\": scope.int(hp.quniform('patience', 50, 500, 25)),\n",
-    "#     \"lambda\": hp.uniform('lambda', 0.05, 1),\n",
-    "    \"tl_model\": hp.choice('tl_model', [\"ResNet50\", \"ResNet18\"]),\n",
+    "#     \"learning_rate\": hp.loguniform('learning_rate', math.log(0.0001), math.log(0.01)),\n",
+    "# #     \"patience\": scope.int(hp.quniform('patience', 50, 500, 25)),\n",
+    "# #     \"lambda\": hp.uniform('lambda', 0.05, 1),\n",
+    "# #     \"tl_model\": hp.choice('tl_model', [\"ResNet50\", \"ResNet18\"]),\n",
+    "#     \"adaptive_smoothing\": False,\n",
+    "#     \"adaptive_lambda\": 0.1,#0.015, #optimized for time\n",
+    "#     \"adaptive_alpha\": 0.5,#0.8, #optimized for time\n",
+    "#     \"lambda\": 1,#0.01,\n",
     "}\n",
     "\n",
     "cp.write(params, hyperp_search_params, \"Random\")"
@@ -221,9 +255,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
