update the way triplet losses work

--- a/Butterflies/train/ConfigParserWriter-SelectExperiments-Butterflies.ipynb
+++ b/Butterflies/train/ConfigParserWriter-SelectExperiments-Butterflies.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Butterflies_round3_sampling2\"\n",
+    "experimentName = \"Butterflies_round3_Layer4FineCoarse\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -47,8 +47,9 @@
     "    # dataset\n",
     "    \"img_res\": 224, #224 #32, 448\n",
     "    \"augmented\": True,\n",
-    "    \"useImbalancedSampling\": False, #\n",
+    "    \"useImbalancedSampling\": True, #\n",
     "    \"useImbalancedCriterion\": False, #\n",
+    "    \"coarseType\": \"coarse\", #\"ring\"\n",
     "\n",
     "    # training\n",
     "    \"batchSize\": 256, #128, # Bigger is more stable (256)\n",
@@ -84,7 +85,7 @@
     "    \"tripletSamples\": 8,\n",
     "    \"tripletSelector\": \"semihard\",\n",
     "    \"tripletMargin\": 2, #0.2\n",
-    "    \"triplet_layers_dic\": \"layer2,layer4\",\n",
+    "    \"triplet_layers_dic\": \"('layer2', 'coarse');('layer4', 'fine')\", #\"('layer2', 'fine');('layer4', 'fine')\" #\"layer2,layer4\",\n",
     "    \n",
     "    \"L1reg\": False,\n",
     "\n",
@@ -117,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Butterflies2/experiments/Butterflies_round3_sampling2/params.json'"
+       "'/raid/elhamod/Butterflies2/experiments/Butterflies_round3_Layer4FineCoarse/params.json'"
       ]
      },
      "execution_count": 3,
@@ -324,9 +325,9 @@
     "    \n",
     "#     {'displayName': 'hier_best_params'},\n",
     "#     {'displayName': 'no_triplet_loss_best_params', \"tripletEnabled\": False},\n",
-    "#     {'displayName': 'no_sampling hier-triplet'},\n",
-    "    {'displayName': 'sampling output hier-triplet', \"useImbalancedCriterion\": True},\n",
-    "    {'displayName': 'sampling output no-triplet', \"tripletEnabled\": False, \"useImbalancedCriterion\": True},\n",
+    "    {'displayName': 'sampling_ring_hier_layer4', \"coarseType\":\"ring\", \"triplet_layers_dic\": \"('layer4', 'coarse');('layer4', 'fine')\"},\n",
+    "#     {'displayName': 'sampling output hier-triplet', \"useImbalancedCriterion\": True},\n",
+    "#     {'displayName': 'sampling output no-triplet', \"tripletEnabled\": False, \"useImbalancedCriterion\": True},\n",
     "#     {'displayName': 'no_sampling no-triplet', \"tripletEnabled\": False},\n",
     "\n",
     "\n",
@@ -352,10 +353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'LowResolution', 'suffix': 'full', 'useCrossValidation': False, 'img_res': 224, 'augmented': True, 'useImbalancedSampling': False, 'useImbalancedCriterion': True, 'batchSize': 256, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 300, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'BB', 'lambda': 0.1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 8, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.75,0.5,0.25', 'addKernelOrthogonality': False, 'displayName': 'sampling output hier-triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/ef4e53b81300d0c9ab5631ca584e466f78c541bed8da5f93c1dcad69\n",
-      "{'image_path': 'LowResolution', 'suffix': 'full', 'useCrossValidation': False, 'img_res': 224, 'augmented': True, 'useImbalancedSampling': False, 'useImbalancedCriterion': True, 'batchSize': 256, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 300, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'BB', 'lambda': 0.1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 8, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.75,0.5,0.25', 'addKernelOrthogonality': False, 'displayName': 'sampling output no-triplet', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/c94dc1952a7aba7f8d2b8f10211b1af7fda8d6bd3fcfd8e4636d1439\n"
+      "{'image_path': 'LowResolution', 'suffix': 'full', 'useCrossValidation': False, 'img_res': 224, 'augmented': True, 'useImbalancedSampling': True, 'useImbalancedCriterion': False, 'coarseType': 'ring', 'batchSize': 256, 'learning_rate': 0.0001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 300, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'BB', 'lambda': 0.1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': True, 'regularTripletLoss': False, 'tripletSamples': 8, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': \"('layer4', 'coarse');('layer4', 'fine')\", 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.75,0.5,0.25', 'addKernelOrthogonality': False, 'displayName': 'sampling_ring_hier_layer4', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
+      "models/b9d6ab1a44cecd217dd8d563a38c5daf1e29f47ec324dcdf3b35c82a\n"
      ]
     }
    ],
