--- a/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
+++ b/HGNN/train/ConfigParserWriter-SelectExperiments-Fish.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"Fish30-5run-PhyloNN7\"\n",
+    "experimentName = \"Fish30-5run-PhyloNN9\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -47,6 +47,7 @@
     "    # dataset\n",
     "    \"img_res\": 448, #224 #32, 448\n",
     "    \"augmented\": True,\n",
+    "    \"useImbalancedSampling\": True, #\n",
     "\n",
     "    # training\n",
     "    \"batchSize\": 64, #128, # Bigger is more stable (256)\n",
@@ -82,7 +83,7 @@
     "    \"tripletSamples\": 2,\n",
     "    \"tripletSelector\": \"semihard\",\n",
     "    \"tripletMargin\": 2, #0.2\n",
-    "    \"triplet_layers_dic\": \"layer2,layer4\",\n",
+    "    \"triplet_layers_dic\": \"('layer2', 'coarse');('layer4', 'fine')\", #\"('layer2', 'fine');('layer4', 'fine')\" #\"layer2,layer4\",\n",
     "    \n",
     "    \"L1reg\": False,\n",
     "\n",
@@ -92,8 +93,8 @@
     "    \"tl_extralayer\": False, #Keep False\n",
     "    \"random_fitting\": False, #Keep False\n",
     "    \n",
-    "    \"phyloDistances\": \"0.75,0.5,0.25\",\n",
-    "    \"addKernelOrthogonality\":False,\n",
+    "    \"phyloDistances\": \"0.8,0.45,0.25\",\n",
+    "    \"addKernelOrthogonality\":True,\n",
     "}\n",
     "\n",
     "experimentsPath= \"/raid/elhamod/Fish/experiments/\" # \"/raid/elhamod/CIFAR_HGNN/experiments/\"\n",
@@ -115,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "'/raid/elhamod/Fish/experiments/Fish30-5run-PhyloNN7/params.json'"
+       "'/raid/elhamod/Fish/experiments/Fish30-5run-PhyloNN9/params.json'"
       ]
      },
      "execution_count": 3,
@@ -306,7 +307,8 @@
     "#     {'displayName': 'Fish30-5run-PhyloNN-adaptivelambda-alpha0.05-intraKorthogonality2', \"addKernelOrthogonality\":True, \"adaptive_smoothing\": True,\"adaptive_lambda\": 0.1, \"adaptive_alpha\": 0.05},\n",
     "#     {'displayName': 'Fish30-5run-PhyloNN-smalldistances-intraKorthogonality', \"addKernelOrthogonality\":True, \"phyloDistances\": \"0.5,0.3,0.1\"},\n",
     "#     {'displayName': 'Fish30-5run-PhyloNN-largedistances', \"phyloDistances\": \"0.9,0.7,0.5\"},\n",
-    "    {'displayName': 'Fish30-5run-PhyloNN-intraKorthogonality', \"addKernelOrthogonality\":True},\n",
+    "#     {'displayName': 'Fish30-5run-PhyloNN-evenphylosplit'},\n",
+    "    {'displayName': 'Fish30-5run-PhyloNN-evenphylosplit-adaptivesmoothing', \"adaptive_smoothing\": True, \"adaptive_lambda\": 10, \"adaptive_alpha\": 0.8},\n",
     "#     {'displayName': 'Fish30-5run-SGD10-BB1momentumweightdecay10-4', \"modelType\":\"BB\"},\n",
     "#     {'displayName': 'Fish-crossval-HGNN-Fish50',\"modelType\":\"HGNN\"},\n",
     "#     {'displayName': 'Fish-crossval-BB-SGDfaster-Fish30',  \"learning_rate\": 0.1,  \"optimizer\": \"SGD\", \"image_path\": \"Curated4/Easy_30\"},\n",
@@ -329,8 +331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'useCrossValidation': True, 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'PhyloNN', 'lambda': 1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': False, 'adaptive_lambda': 0.1, 'adaptive_alpha': 0.5, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': 'layer2,layer4', 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.75,0.5,0.25', 'addKernelOrthogonality': True, 'displayName': 'Fish30-5run-PhyloNN-intraKorthogonality', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03}\n",
-      "models/939a94b44c94705f834139f96c9567ac60813f32ed14316382c0c7ec\n"
+      "{'image_path': 'Curated4/Easy_30', 'suffix': None, 'useCrossValidation': True, 'img_res': 448, 'augmented': True, 'useImbalancedSampling': True, 'batchSize': 64, 'learning_rate': 0.001, 'numOfTrials': 5, 'fc_layers': 1, 'pretrained': True, 'epochs': 120, 'patience': -1, 'optimizer': 'adabelief', 'scheduler': 'plateau', 'weightdecay': 0.01, 'scheduler_gamma': 0.5, 'scheduler_patience': 15, 'modelType': 'PhyloNN', 'lambda': 1, 'two_phase_lambda': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool', 'adaptive_smoothing': True, 'adaptive_lambda': 10, 'adaptive_alpha': 0.8, 'tripletEnabled': False, 'regularTripletLoss': False, 'tripletSamples': 2, 'tripletSelector': 'semihard', 'tripletMargin': 2, 'triplet_layers_dic': \"('layer2', 'coarse');('layer4', 'fine')\", 'L1reg': False, 'phylogeny_loss': False, 'grayscale': False, 'tl_extralayer': False, 'random_fitting': False, 'phyloDistances': '0.8,0.45,0.25', 'addKernelOrthogonality': True, 'displayName': 'Fish30-5run-PhyloNN-evenphylosplit-adaptivesmoothing', 'noSpeciesBackprop': False, 'phylogeny_loss_epsilon': 0.03, 'useImbalancedCriterion': False}\n",
+      "models/6dec018877e730c4eee9098f2260d6a92fcb64b265c3dfa22f1c46ba\n"
      ]
     }
    ],
